@@ -1,17 +1,18 @@
 ﻿<Properties>
   <MonoDevelop.Ide.Workspace ActiveConfiguration="Debug|x86" ctype="Workspace" />
-  <MonoDevelop.Ide.Workbench ActiveDocument="src/util/AttributeUtil.cs" ctype="Workbench">
+  <MonoDevelop.Ide.Workbench ActiveDocument="src/LDAP.cs" ctype="Workbench">
     <Files>
-      <File FileName="src/LDAP.cs" Line="289" Column="82" />
-      <File FileName="src/LDAPUser.cs" Line="59" Column="44" />
-      <File FileName="src/ATTRNAME.cs" Line="43" Column="41" />
-      <File FileName="src/util/AttributeUtil.cs" Line="208" Column="31" />
+      <File FileName="src/LDAP.cs" Line="221" Column="77" />
+      <File FileName="src/LDAPUser.cs" Line="34" Column="17" />
+      <File FileName="src/util/AttributeUtil.cs" Line="97" Column="62" />
     </Files>
     <Pads>
       <Pad Id="ProjectPad">
         <State expanded="True" selected="True">
           <Node name="sharpnldap" expanded="True">
-            <Node name="src" expanded="True" />
+            <Node name="src" expanded="True">
+              <Node name="util" expanded="True" />
+            </Node>
           </Node>
         </State>
       </Pad>
